src/snapshots/typed_lambda_calculus__tests__infer_identity.snap
---
source: src/tests.rs
expression: ty
---
Lambda(
    Var(
        TyVar(t3),
    ),
    Var(
        TyVar(t3),
    ),
)
