src/snapshots/typed_lambda_calculus__tests__parse_let.snap
---
source: src/tests.rs
expression: ast
---
Let(
    Ident(x),
    Int(
        5,
    ),
    Var(
        Ident(x),
    ),
)
