src/snapshots/typed_lambda_calculus__tests__parse_multiline_apply.snap
---
source: src/tests.rs
expression: ast
---
Let(
    Ident(f),
    Lambda(
        Ident(x),
        Var(
            Ident(x),
        ),
    ),
    Apply(
        Var(
            Ident(f),
        ),
        Int(
            5,
        ),
    ),
)
